--- a/index.html
+++ b/index.html
@@ -33,15 +33,19 @@
     <section id="home" class="home-section">
       <div class="container bio-container">
         <div class="bio-photo">
-          <img src="path/to/your-photo.jpg" alt="[Tu Nombre]" />
+          <img
+            src="images/bio.jpg"
+            alt="Flor Larraburu"
+            class="rounded-photo"
+          />
         </div>
         <div class="bio-text">
-          <h2 class="section-title">Bienvenida a mi Portafolio</h2>
+          <h2 class="section-title">Bienvenido a mi Portafolio</h2>
           <p class="section-description">
             Soy una profesional con formación en telecomunicaciones y
             administración de empresas (ADE). Aquí puedes explorar mis proyectos
-            de desarrollo de software, fotografía y videos, así como algunas de
-            mis escrituras.
+            de desarrollo de software, fotografía y videos, así como algunos de
+            mis escritos.
           </p>
         </div>
       </div>
