--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         </div>
       </div>
     </section>
+
     <!-- Línea temporal -->
     <section class="cd-horizontal-timeline">
       <div class="timeline">
@@ -306,6 +307,7 @@
         <p>&copy; 2024 [Tu Nombre]. Todos los derechos reservados.</p>
       </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <script src="js/scripts.js"></script>
   </body>
