"navbar, timeline medio correct"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portafolio de [Tu Nombre]</title>
+    <title>Portafolio de Flor Larraburu</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="stylesheet"
@@ -20,11 +20,11 @@
         <h1 class="logo">Flor Larraburu</h1>
         <nav class="navbar">
           <ul>
-            <li><a href="#home">Bio</a></li>
-            <li><a href="#photography">Fotografía y Video</a></li>
-            <li><a href="#tech">Tech</a></li>
-            <li><a href="#writing">Pensamientos</a></li>
-            <li><a href="#contact">Contacto</a></li>
+            <li><a href="#home">BIO</a></li>
+            <li><a href="#photography">AUDIOVISUAL</a></li>
+            <li><a href="#tech">TECH</a></li>
+            <li><a href="#writing">ESCRITOS</a></li>
+            <li><a href="#contact">CONTACTO</a></li>
           </ul>
         </nav>
       </div>
@@ -244,11 +244,18 @@
             imágenes capturadas y videos producidos con dedicación.
           </p>
           <div class="photo-grid">
-            <div class="photo-category" data-category="naturaleza">
+            <div class="photo-category" data-category="Deporte">Deporte</div>
+            <div class="photo-category" data-category="Escalada">Escalada</div>
+            <div class="photo-category" data-category="Naturaleza">
               Naturaleza
             </div>
-            <div class="photo-category" data-category="ciudad">Ciudad</div>
-            <div class="photo-category" data-category="retratos">Retratos</div>
+            <div class="photo-category" data-category="Desde los cielos">
+              Desde los cielos
+            </div>
+            <div class="photo-category" data-category="Hosteleria">
+              Hosteleria
+            </div>
+            <div class="photo-category" data-category="Vídeos">Vídeos</div>
           </div>
           <div class="photo-gallery" id="gallery"></div>
         </div>
