--- a/index.html
+++ b/index.html
@@ -58,18 +58,20 @@
           <div class="events">
             <ol>
               <li>
-                <a href="#0" data-date="16/01/2014" class="selected">16 Jan</a>
+                <a href="#0" data-date="11/09/2019" class="selected"
+                  >11 Sept 2019</a
+                >
               </li>
-              <li><a href="#0" data-date="28/02/2014">28 Feb</a></li>
-              <li><a href="#0" data-date="20/04/2014">20 Mar</a></li>
-              <li><a href="#0" data-date="20/05/2014">20 May</a></li>
-              <li><a href="#0" data-date="09/07/2014">09 Jul</a></li>
-              <li><a href="#0" data-date="30/08/2014">30 Aug</a></li>
-              <li><a href="#0" data-date="15/09/2014">15 Sep</a></li>
-              <li><a href="#0" data-date="01/11/2014">01 Nov</a></li>
-              <li><a href="#0" data-date="10/12/2014">10 Dec</a></li>
-              <li><a href="#0" data-date="19/01/2015">29 Jan</a></li>
-              <li><a href="#0" data-date="03/03/2015">3 Mar</a></li>
+              <li><a href="#0" data-date="23/02/2020">28 Feb</a></li>
+              <li><a href="#0" data-date="20/04/2020">20 Mar</a></li>
+              <li><a href="#0" data-date="20/05/2021">20 May</a></li>
+              <li><a href="#0" data-date="09/07/2021">09 Jul</a></li>
+              <li><a href="#0" data-date="30/08/2022">30 Aug</a></li>
+              <li><a href="#0" data-date="15/09/2022">15 Sep</a></li>
+              <li><a href="#0" data-date="01/11/2023">01 Nov</a></li>
+              <li><a href="#0" data-date="10/12/2023">10 Dec</a></li>
+              <li><a href="#0" data-date="19/01/2024">29 Jan</a></li>
+              <li><a href="#0" data-date="28/06/2024">3 Mar</a></li>
             </ol>
 
             <span class="filling-line" aria-hidden="true"></span>
@@ -88,16 +90,13 @@
 
       <div class="events-content">
         <ol>
-          <li class="selected" data-date="16/01/2014">
-            <h2>Horizontal Timeline</h2>
-            <em>January 16th, 2014</em>
+          <li class="selected" data-date="11/09/2019">
+            <h2>Comienzo de carrera</h2>
+            <em>11 de septiembre de 2019</em>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
-              praesentium officia, fugit recusandae ipsa, quia velit nulla
-              adipisci? Consequuntur aspernatur at, eaque hic repellendus sit
-              dicta consequatur quae, ut harum ipsam molestias maxime non nisi
-              reiciendis eligendi! Doloremque quia pariatur harum ea amet
-              quibusdam quisquam, quae, temporibus dolores porro doloribus.
+              Primer dia en la universidad en el Doble Grado en Ingenieria y
+              Servicios de telecomunicaciones + Administración y Dirección de
+              empresas.
             </p>
           </li>
 
