--- a/index.html
+++ b/index.html
@@ -281,6 +281,38 @@
             Lee algunos de mis escritos, donde combino mi formación técnica con
             la creatividad y la expresión escrita.
           </p>
+
+          <div class="pdf-container">
+            <h3>
+              ¡1er Premio en el V Concurso de Redacción Periodística para
+              Jóvenes!
+            </h3>
+            <a
+              href="https://www.nationalgeographic.com.es/concursos/lee-trabajados-ganadores-v-concurso-redaccion-periodistica-para-jovenes_22671"
+              target="_blank"
+              class="article-link"
+            >
+              <img
+                src="images/National-Geographic.webp"
+                alt="Logo National Geographic"
+              />
+            </a>
+            <div class="pdf-link">
+              <a href="#" id="openModal">Abrir PDF</a>
+            </div>
+          </div>
+
+          <div id="pdfModal" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <iframe
+                src="pdf/Un Llamado Urgente para Proteger Nuestros Océanos.pdf"
+                type="application/pdf"
+                width="100%"
+                height="100%"
+              ></iframe>
+            </div>
+          </div>
         </div>
       </div>
     </section>
