--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="photo-category">Culturas</div>
+                <div class="photo-category">Cultura</div>
                 <div class="photo-gallery">
                   <img
                     src="images/CULTURA/DSC01555.JPG"
@@ -338,7 +338,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="photo-category">Hosteleria</div>
+                <div class="photo-category">Hostelería</div>
                 <div class="photo-gallery">
                   <img
                     src="images/HOSTELERIA/DSC01433.JPG"
@@ -412,10 +412,6 @@
               target="_blank"
               class="article-link"
             >
-              <img
-                src="images/National-Geographic.webp"
-                alt="Logo National Geographic"
-              />
             </a>
             <div class="pdf-link">
               <a href="#" id="openModal">Abrir PDF</a>
